# kurio-kits-shopify

./: pyproject.toml
.github/workflows/: cloud-functions.yaml
shopify/: test_shopify_service.py
shopify/pipeline/: orders.py
shopify/shop/: __init__.py
