[tool.poetry]
name = "kurio-kits-shopify"
version = "1.0.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.28.2"
google-cloud-bigquery = "^3.7.0"
google-cloud-tasks = "^2.13.0"
compose = "^1.4.8"
google-auth = "^2.16.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
mypy = "^1.1.1"
types-requests = "^2.28.11.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
